completed the interface theme and other issues!

--- a/UltimateShopping/pom.xml
+++ b/UltimateShopping/pom.xml
@@ -45,7 +45,21 @@
 			<version>${spring.version}</version>
 		</dependency>
 		
+		<!-- Servlet Api  -->
 		
+		 <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>servlet-api</artifactId>
+        <version>2.5</version>
+        <scope>provided</scope>
+    </dependency>
+    
+    <dependency>
+        <groupId>javax.servlet.jsp</groupId>
+        <artifactId>javax.servlet.jsp-api</artifactId>
+        <version>2.3.3</version>
+        <scope>provided</scope>
+    </dependency>
 		
 		 <!-- JSTL -->
 		
